echo/deploy/4-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: htdvisser-echo
spec:
  hosts:
  - "*"
  gateways:
  - htdvisser-echo-gateway
  http:
  - name: htdvisser-echo-grpc
    match:
    - uri:
        prefix: /htdvisser.echo.v1alpha1.EchoService/
    route:
    - destination:
        host: htdvisser-echo
        subset: v1alpha1
        port:
          number: 9090
  - name: htdvisser-echo-http
    match:
    - uri:
        prefix: /echo/api/v1alpha1/
    rewrite:
      uri: /api/v1alpha1/
    route:
    - destination:
        host: htdvisser-echo
        subset: v1alpha1
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: htdvisser-echo
spec:
  host: htdvisser-echo
  subsets:
  - name: v1alpha1
    labels:
      version: v1alpha1
